Updates: Adding Protoflio Section and About Section

--- a/index.html
+++ b/index.html
@@ -80,38 +80,102 @@
                 <p class="special-pragh"> Do not be busy, we are here for helping you  </p>
 
                 <div class="service-wrapper"> <!-- 1/3  -->
-                    <div class="service"> <!-- 1/2 -->
-                        <i class="fas fa-print"></i>
-                        <div>
-                            <h3>Graphic Design</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae dolorum esse rem corporis nisi voluptatem nemo odit, porro exercitationem. </p>
+                    <div class="col">
+                        <div class="service"> <!-- 1/2 -->
+                            <i class="fas fa-print"></i>
+                            <div class="text">
+                                <h3>Graphic Design</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                            </div>
+                        </div>
+                        <div class="service"> <!-- 1/2 -->
+                            <i class="fas fa-print"></i>
+                            <div class="text">
+                                <h3>Graphic Design</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="service"> <!-- 1/2 -->
-                        <i class="fas fa-print"></i>
-                        <div>
-                            <h3>Graphic Design</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae dolorum esse rem corporis nisi voluptatem nemo odit, porro exercitationem. </p>
+                    <div class="col">
+                        <div class="service"> <!-- 1/2 -->
+                            <i class="fas fa-print"></i>
+                            <div class="text">
+                                <h3>Graphic Design</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                            </div>
+                        </div>
+                        <div class="service"> <!-- 1/2 -->
+                            <i class="fas fa-print"></i>
+                            <div class="text">
+                                <h3>Graphic Design</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="service"> <!-- 1/2 -->
-                        <i class="fas fa-print"></i>
-                        <div>
-                            <h3>Graphic Design</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae dolorum esse rem corporis nisi voluptatem nemo odit, porro exercitationem. </p>
-                        </div>
-                    </div>
-                    <div class="service">
-                        <div class="imag">
-                                <img src="./image/pexels-polina-zimmerman-3747266.jpg" alt="" width="250px" height="300px">
+                    <div class="col">
+                        <div class="service">
+                            <div class="imag image-column">
+                                    <img src="./image/service.jpg" alt="service" >
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
         <!-- Start Services  Section  -->
+
+        <!-- Start Protoflio Section -->
+        <div class="protoflio">
+            <div class="container">
+                <h2 class="special-heading">Protofolio</h2>
+                <p class="special-pragh"> Do not be busy, we are here for helping you  </p>
+
+                <div class="protfolio-wrapper"> 
+                    <div class="card">
+                        <img src="./image/portoflio-01.jpg" alt="">
+                        <div class="info">
+                            <h4> Lorem ipsum dolor sit amet </h4>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae laboriosam id illum odio atque dignissimos et recusandae magnam omnis dolores, nihil molestias reprehenderit totam excepturi. </p>
+                        </div>
+                        </div>
+                    <div class="card">
+                        <img src="./image/portoflio-01.jpg" alt="">
+                        <div class="info">
+                            <h4> Lorem ipsum dolor sit amet </h4>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae laboriosam id illum odio atque dignissimos et recusandae magnam omnis dolores, nihil molestias reprehenderit totam excepturi. </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./image/portoflio-01.jpg" alt="">
+                        <div class="info">
+                            <h4> Lorem ipsum dolor sit amet </h4>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae laboriosam id illum odio atque dignissimos et recusandae magnam omnis dolores, nihil molestias reprehenderit totam excepturi. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Protoflio Section -->
+
+        <!-- Start About Section  -->
+        <div class="about">
+            <div class="container">
+                <h2 class="special-heading">About</h2>
+                <p class="special-pragh"> we born to help you   </p>
+
+                <div class="about-wrapper"> 
+                    <div class="image">
+                        <img src="./image/about.jpg" alt="">
+                    </div>
+                    <div class="about-info">
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, natus iusto! Ex, ea. Doloremque dolorum, laboriosam hic repellat nostrum ratione laudantium nobis ipsum. Perferendis, sapiente provident illum exercitationem laborum perspiciatis. </p>
+                        <hr class="line">
+                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente aspernatur, autem ullam animi expedita quasi tenetur, explicabo totam excepturi inventore eaque mollitia! Similique molestias, enim numquam voluptate est accusamus recusandae! </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Start About Section  -->
 
 
 
